--- a/aws_node/views/error.ejs
+++ b/aws_node/views/error.ejs
@@ -37,7 +37,8 @@
                         <h1>An error occured!</h1>
                     </div>
                     <div>
-                        <p>There was an error when processing your request!</p>
+
+                        <h2><%= error %> </h2>
                     </div>
                 </div>
             </div>
@@ -46,9 +47,9 @@
 
                 <div class="col-sm-2" ></div>
 
-                <div class="col-sm-4 mb-3">
+                <div class="col-sm-4 mb-3 mx-auto">
                     <h2>Further steps:</h2>
-                    <p> The converted file can be downloaded on the files page.
+                    <p> Please try to make the request again and check if the parameters meet the codec's specifications.
                     </p>
                 </div>
 
