--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -1,6 +1,36 @@
 .card {
-    border: 1px solid #444;
-    border-radius: 3px;
+    display: inline-block;
+   /*  border: 1px solid #444; */
+    border-radius: 5px;
     background-color: #fff;
     cursor: pointer;
+    
 }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    }
+    form {
+    max-width: 600px;
+    margin: 10px auto;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    }
+    label {
+    display: block;
+    margin-bottom: 8px;
+    }
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+    resize: vertical;
+    }
