--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -7,6 +7,25 @@
     
 }
 
+.card-header{
+    background:#2a6bb7;
+    color: white;
+}
+
+.jumbotron{
+    background:#2a6bb7;
+    color: white;
+}
+
+.text-board{
+    max-width: 600px;
+    margin: 10px auto;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    }
+
 body {
     font-family: 'Open Sans', sans-serif;
     }
