--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -53,3 +53,8 @@ body {
     margin-bottom: 16px;
     resize: vertical;
     }
+
+    button{
+        background:#2a6bb7;
+        color: white;
+    }
