added Check for S3 availability

--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -12,6 +12,11 @@
     color: white;
 }
 
+.card-header{
+    background:#b72a2a;
+    color: white;
+}
+
 .jumbotron{
     background:#2a6bb7;
     color: white;
