--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -121,3 +121,35 @@ input[type="file"] {
     color: white;
     border-radius: 5px;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.button-collapse {
+    display: inline-block;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button-collapse::before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    margin-right: 10px;
+    vertical-align: middle;
+  }
+  
+  .button-collapse.collapsed::before {
+    transform: rotate(90deg);
+  }
+  
