--- a/aws_node/public/error.ejs
+++ b/aws_node/public/error.ejs
@@ -8,7 +8,7 @@
         <title>Convert Media S3</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+        <link rel="stylesheet" type="text/css" href="/CSS/main.css">
     </head>
 
 
@@ -38,10 +38,28 @@
                     </div>
                     <div>
 
-                        <h2><%= error %> </h2>
+                        <h2><%= body.error_message %> </h2>
                     </div>
                 </div>
             </div>
+
+                <form action="">
+
+                    <div class="form-row mb-3 ">
+
+                        <button class="button-collapse mx-auto mb-3" type="button" data-toggle="collapse" data-target=".collapse_additional" aria-expanded="false" aria-controls="collapseExample">
+                            additional informations
+                        </button>
+
+                        <div class="collapse collapse_additional">
+
+                                <div class="scroll-box mx-auto" style="min-height: 400px; background-color: white;">
+                                    <%= body.additional_info %>
+                                </div>
+
+                        </div>
+                    </div>
+                </form>
 
             <div class="row">
 
@@ -53,14 +71,11 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
-
-
-                </div>
-                </div>
-
-                <div class="col-sm-2" ></div>
+                <div class="col-sm-4"></div>
             </div>
+
+            <div class="col-sm-2" ></div>
+        </div>
 
             <!-- Bootstrap scripts -->
 
