added header with logo to all pages

--- a/aws_node/public/error.ejs
+++ b/aws_node/public/error.ejs
@@ -32,9 +32,9 @@
 
         <div class="container">
             <div style="background:#2a6bb7; color: white !important" class="jumbotron mt-4">
-                <div class="mx-auto" style="width: 20rem;">
+                <div class="mx-auto">
                     <div>
-                        <h1>An error occured!</h1>
+                        <h1 style="text-align: center;">An error occured!</h1>
                     </div>
                     <div>
 
@@ -43,7 +43,16 @@
                 </div>
             </div>
 
-                <form action="">
+                <form action="" style="max-width: 700;">
+
+
+                    <div class="col-sm-8 mx-auto">
+                        <h2>Further steps:</h2>
+                        <p> Please try to make the request again and check if the parameters meet the codec's specifications.
+                        </p>
+                    </div>
+
+                    <hr style="margin-top: 30px; margin-bottom: 30px;">
 
                     <div class="form-row mb-3 ">
 
@@ -65,11 +74,6 @@
 
                 <div class="col-sm-2" ></div>
 
-                <div class="col-sm-4 mb-3 mx-auto">
-                    <h2>Further steps:</h2>
-                    <p> Please try to make the request again and check if the parameters meet the codec's specifications.
-                    </p>
-                </div>
 
                 <div class="col-sm-4"></div>
             </div>
