--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   background-color: #fff;
   cursor: pointer;
-  min-width: 208px !important;
+  width: 208px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.418);
   margin-right: 0.5%;
   margin-left: 0.5%;
@@ -13,6 +13,8 @@
 .card-header{
   background:#2a6bb7;
   color: white;
+  font-size: 15px;
+  font-weight: 310;
 }
 
 .card-body{
@@ -44,6 +46,7 @@ input::placeholder {
 .scroll-box{
 overflow:scroll;
 height:20% !important;
+min-height: 200px;
 max-height: 301px;
 width:97%;
 max-width: 702px;
@@ -125,6 +128,11 @@ body {
   resize: vertical;
   }
 
+  h2{
+    text-align: center;
+    margin-bottom: 2%;
+  }
+
 button{
       background:#2a6bb7 !important;
       color: white;
@@ -149,6 +157,7 @@ input[type="file"] {
   cursor: pointer;
   background:#2a6bb7;
   color: white;
+  border-radius: 5px;
 }
 
 .nowrap {
