--- a/aws_node/public/error.ejs
+++ b/aws_node/public/error.ejs
@@ -15,19 +15,20 @@
 
     <body onload="loadData()">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Convert</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">            
+            <a class="navbar-brand" href="/">
+                <img src="/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+                Convert
+            </a>
               <ul class="navbar-nav">
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="nav-link" href="/files">File Management <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/about">About</a>
                 </li>
               </ul>
-            </div>
-          </nav>
+        </nav>
           
 
         <div class="container">
