--- a/aws_node/public/CSS/main.css
+++ b/aws_node/public/CSS/main.css
@@ -56,6 +56,7 @@ padding: 2.5%;
 background-color: #ffffff8f !important;
 }
 
+/* renders a tick when upload was sucess full */
 .tick::before {
   content: '\2713';
   font-size: xx-large; 
@@ -65,6 +66,7 @@ background-color: #ffffff8f !important;
   animation-fill-mode: forwards;
 }
 
+/* fade out animation */
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -74,6 +76,7 @@ background-color: #ffffff8f !important;
   }
 }
 
+/* renders red x when upload failed */
 .x::before {
   content: '\2717';
   color: red;
@@ -137,9 +140,6 @@ button{
       background:#2a6bb7 !important;
       color: white;
   }
-
-
-
 
 /* Hide the default input element */
 #fs3-file {
